# WardSONDB

./: .gitignore  API.md  CONTRIBUTING.md  Cargo.toml  README.md
benches/: bitmap_bench.rs  storage_bench.rs
src/: config.rs  error.rs  main.rs
src/engine/: bitmap.rs  collection.rs  document.rs  mod.rs  storage.rs  ttl.rs
src/index/: mod.rs  secondary.rs
src/query/: aggregate.rs  distinct.rs  executor.rs  filter.rs  mod.rs  parser.rs  planner.rs  sort.rs
src/server/: mod.rs  response.rs  ttl_worker.rs
src/server/middleware/: error_handler.rs
src/server/routes/: collections.rs  documents.rs  indexes.rs  query.rs  system.rs
tests/: integration_test.rs
