[package]
name = "wardsondb"
version = "0.1.0"
edition = "2024"

[dependencies]
# HTTP
axum = "0.8"
axum-server = { version = "0.7", features = ["tls-rustls"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "compression-gzip", "cors"] }

# Storage
fjall = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Document handling
uuid = { version = "1", features = ["v7"] }
jsonschema = "0.29"

# TLS
rcgen = "0.13"

# Crypto
subtle = "2"

# Bitmap
roaring = "0.10"

# Concurrency
parking_lot = "0.12"

# Regex
regex = "1"

# System
libc = "0.2"

# Utilities
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
reqwest = { version = "0.12", features = ["json"] }
tokio-test = "0.4"
tempfile = "3"
rand = "0.8"

[[bench]]
name = "storage_bench"
harness = false

[[bench]]
name = "bitmap_bench"
harness = false
